# Firm-ai

./: .env.local.example  .gitignore  CHANGELOG.md  CLI.md  CONTRIBUTING.md  ENV_SETUP_GUIDE.md  FEATURES_IMPLEMENTED.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  QUICKSTART.md  README.md  README_TAURI.md  README_UPDATE.md  TAURI_SETUP.md  cli.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
components/: case-upload-card.tsx  dashboard-footer.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  flashcard-set.tsx  loading-spinner.tsx  markdown-message.tsx  page-transition.tsx  quiz-card.tsx  sidebar-context.tsx  summary-display-card.tsx
lib/: document-processor.ts  llm.ts  products.ts  rag.ts  stripe.ts  tauri-detector.ts  tauri-error-handler.ts  tauri-flashcards.ts  tauri-llm.ts  tauri-mock-tests.ts  tauri-rag.ts  tauri-study-plans.ts  tauri-sync.ts  unified-llm.ts
scripts/: 001-init-database.sql  002-seed-data.sql  003-add-subscriptions.sql  004-rag-schema.sql  (+6 more)
src-tauri/: .env.example  CREATE_INSTALLER_IMAGES.md  Cargo.toml  INSTALLER_SETUP.md  LICENSE.txt  NSIS_LIMITATION.md  installer.nsi  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: BANNER_IMAGES.md  README.md  icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: config.rs  db.rs  document.rs  error.rs  flashcards.rs  llm.rs  main.rs  mock_tests.rs  rag.rs  state.rs  study_plans.rs  sync.rs  validation.rs
(+29 files in other folders)
